--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">ClswTmdbApi2022</string>
+
+    <string name="next_button">NEXT</string>
+    <string name="prev_button">PREV</string>
+    <string name="page_number">Page %1$d</string>
+
+    <!--  toast messages -->
+    <string name="toast_no_previous_page">No previous page</string>
+    <string name="toast_http_error">Unhandled HTTP error code </string>
+    <string name="toast_network_error">Network error while calling TMDB api</string>
 </resources>
